Changed image to https

--- a/cinder/nav.html
+++ b/cinder/nav.html
@@ -4,7 +4,7 @@
         <!-- Collapsed navigation -->
         <div class="navbar-header">
 
-            <img src="http://dotlearn.io/icons/dotlearn.png" class="navbar-icon" />
+            <img src="https://dotlearn.io/icons/dotlearn.png" class="navbar-icon" />
 
             {% if include_nav or include_next_prev or repo_url %}
             <!-- Expander button -->
