--- a/src/docs-page.html
+++ b/src/docs-page.html
@@ -446,10 +446,12 @@
 					<header class="docs-header">
 						<h1 class="docs-heading">Video Conferencing</h1>
 						<section class="docs-intro">
-							<p>You can also use Vectorly's AI Upscaler for upscaling within Video Conferencing architectures. Here, we outline 3 different ways AI upscaling can be used to improve video quality for end users within Video Conferencing systems.</p>
+							<p>You can also use Vectorly's AI Upscaler for upscaling within Video Conferencing architectures. Here, we outline 3 different ways AI upscaling can be used to improve video quality for end users within WebRTC Video Conferencing systems.</p>
 
 
-							<p>We've also put together an <a href="https://github.com/Vectorly/daily-call-object"> example repository</a>, showing how Vectorly can be integrated into <a href="https://daily.co/"> Daily.co</a>, a popular video-conferencing API service.</p>
+							<p>We've also put together an <a href="https://github.com/Vectorly/webrtc-demo"> example repository</a>, showing how Vectorly can be integrated with WebRTC.</p>
+
+							<p>You can see a full working WebRTC demo <a href="https://files.vectorly.io/demo/webrtc/index.html">here</a> </p>
 						</section><!--//docs-intro-->
 
 
@@ -458,7 +460,7 @@
 							<p>You can add Vectorly's AI upscaler directly on the client side for one or more clients, which helps improve the video experience for each individual receiver (for example, if the receiver's network speed drops). This option primarily makes sense for <a href="https://webrtchacks.com/sfu-simulcast/">Simulcast SFU</a> and <a href="https://trueconf.com/blog/wiki/mcu-video-conferencing-architecture">MCU</a> architectures, where receivers have the option of recieving multiple quality levels of video.</p>
 
 
-							<p>You'll need to feed the video tag of the video feed you want to upscale. For a real world example, you can see the <a href="https://github.com/Vectorly/daily-call-object/blob/test/daily-upscale/src/components/Tile/Tile.js#L77"> exact line </a> where the upscaler is defined (in the <a href="https://daily.co/"> Daily.co example repo</a>)</p>
+							<p>You'll need to feed the video tag of the video feed you want to upscale. For a real world example, you can see the <a href="https://github.com/Vectorly/webrtc-demo/blob/vectorly-webrtc/demo/js/main.js#L140"> exact line </a> where the upscaler is defined in the WebRTC demo repo</p>
 
 							<script src="https://gist.github.com/sb2702/c394e7c5fffcbd5f9cdbacb20bf1e4f7.js"></script>
 
@@ -473,10 +475,9 @@
 							<p> Doing this makes sense in scenarios where you would want to reduce bandwidth for all participants involved.</p>
 
 
-							<p>To implement this, you would need to set the output resolution for each broadcaster's video (see <a href="https://gist.github.com/sb2702/9d1ebbfdef025268757e798bf3ad85c0">example</a> ), as well as to adjust the output bitrate in WebRTC (<a href="https://webrtc.github.io/samples/src/content/peerconnection/bandwidth/">example</a>).
-							In the daily in the <a href="https://daily.co/"> Daily.co example repo</a>, the resolution is defined <a href="https://github.com/Vectorly/daily-call-object/blob/test/daily-upscale/src/components/App/App.js#L121">here </a></p>
+							<p>To implement this, you would need to set the output resolution for each broadcaster's video (see <a href="https://gist.github.com/sb2702/9d1ebbfdef025268757e798bf3ad85c0">example</a> ), as well as to adjust the output bitrate in WebRTC (<a href="https://github.com/Vectorly/webrtc-demo/blob/vectorly-webrtc/demo/js/main.js#L212">example</a>).
+							You can see the a full working version of bandwidth and bitrate selection in the <a href="https://github.com/Vectorly/webrtc-demo/blob/vectorly-webrtc/demo/js/main.js"> WebRTC Demo repository</a>.
 
-							<script src="https://gist.github.com/sb2702/83539bfa6f5bbb1cd9036892d69443a3.js"></script>
 
 							<p>This lower quality video is then broadcast to all users, which will then re-upscale it to normal resolution with the AI upscaling module.</p>
 
@@ -502,14 +503,14 @@
 
 									<tr>
 										<td>360x480</td>
-										<td>500kbps</td>
-										<td>350kbps</td>
+										<td>400kbps</td>
+										<td>300kbps</td>
 									</tr>
 
 									<tr>
 										<td>360x640</td>
-										<td>600kbps</td>
-										<td>450kbps</td>
+										<td>500kbps</td>
+										<td>400kbps</td>
 									</tr>
 
 									</tbody>
