--- a/src/docs-page.html
+++ b/src/docs-page.html
@@ -666,7 +666,7 @@
 						</figure>
 
 
-						<p>Our general AI upscaler filter generally achieves a 5 to 10 point VMAF improvement compaed to bicubic scaling. With <a href="#item-1-3"> content-specific AI models </a>, we will likely be able to achieve further quality gains. We are currently working on releasing quality comparisons for content specific models.</p>
+						<p>Our general AI upscaler filter generally achieves a 10 to 15 point VMAF improvement compared to bicubic scaling. With <a href="#item-1-3"> content-specific AI models</a>, or heavier models, we will likely be able to achieve further quality gains. We are currently working on releasing quality comparisons for content specific models.</p>
 
 
 						<h5>Quality visualization</h5>
