Changed demo links

--- a/src/docs-page.html
+++ b/src/docs-page.html
@@ -540,9 +540,10 @@
 
 
 							<ul>
-								<li> <a href="https://files.vectorly.io/demo/jellyfish-240p-001/index.html">Jellyfish</a></li>
-								<li> <a href="https://files.vectorly.io/demo/ducks-240p-001/index.html">Ducks</a></li>
-								<li> <a href="https://files.vectorly.io/demo/tractor-240p-001/index.html">Tractor</a></li>
+								<li> <a href="https://files.vectorly.io/demo/docs-demos/jellyfish/index.html" target="_blank">Jellyfish</a></li>
+								<li> <a href="https://files.vectorly.io/demo/docs-demos/ducks/index.html" target="_blank">Ducks</a></li>
+								<li> <a href="https://files.vectorly.io/demo/docs-demos/tractor/index.html" target="_blank">Tractor</a></li>
+								<li> <a href="https://files.vectorly.io/demo/docs-demos/fish/index.html" target="_blank">Fish</a></li>
 
 							</ul>
 
