Added some info about new libs

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
 			            <li class="list-inline-item"><a href="https://www.linkedin.com/company/vectorly"><i class="fab fa-linkedin fa-fw"></i></a></li>
 		                <li class="list-inline-item"><a href="https://angel.co/vectorly"><i class="fab fa-angellist fa-fw"></i></a></li>
 		            </ul><!--//social-list-->
-		            <a href="https://vectorly.io/contact.html" class="btn btn-primary d-none d-lg-flex">Try it out</a>
+		            <a href="https://vectorly.io/upscaler/" class="btn btn-primary d-none d-lg-flex">Try it out</a>
 	            </div><!--//docs-top-utilities-->
             </div><!--//container-->
         </div><!--//branding-->
@@ -163,7 +163,7 @@
 		    <h3 class="mb-2 text-white mb-3">Ready to Try it Out?</h3>
 		    <div class="section-intro text-white mb-3 single-col-max mx-auto"> Our AI Upscaler is still in beta, but you can get started by signing up below.</div>
 		    <div class="pt-3 text-center">
-			    <a class="btn btn-light" href="https://vectorly.io/contact.html">Get Started<i class="fas fa-arrow-alt-circle-right ml-2"></i></a>
+			    <a class="btn btn-light" href="https://vectorly.io/upscaler/">Get Started<i class="fas fa-arrow-alt-circle-right ml-2"></i></a>
 		    </div>
 	    </div>
     </section><!--//cta-section-->
