--- a/src/index.html
+++ b/src/index.html
@@ -191,7 +191,18 @@
     <!-- Javascript -->          
     <script src="assets/plugins/jquery-3.4.1.min.js"></script>
     <script src="assets/plugins/popper.min.js"></script>
-    <script src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>  
+    <script src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
+
+
+	<script type="text/javascript">
+        window._mfq = window._mfq || [];
+        (function() {
+            var mf = document.createElement("script");
+            mf.type = "text/javascript"; mf.defer = true;
+            mf.src = "//cdn.mouseflow.com/projects/ade379db-9c1a-4bba-9bf0-a0fbf6ceb01e.js";
+            document.getElementsByTagName("head")[0].appendChild(mf);
+        })();
+	</script>
 
 </body>
 </html> 
