updated demo links to @latest

--- a/src/docs-page.html
+++ b/src/docs-page.html
@@ -506,10 +506,10 @@
 
 
 							<ul>
-								<li> <a href="https://files.vectorly.io/demo/docs-demos/jellyfish/index.html" target="_blank">Jellyfish</a></li>
-								<li> <a href="https://files.vectorly.io/demo/docs-demos/ducks/index.html" target="_blank">Ducks</a></li>
-								<li> <a href="https://files.vectorly.io/demo/docs-demos/tractor/index.html" target="_blank">Tractor</a></li>
-								<li> <a href="https://files.vectorly.io/demo/docs-demos/fish/index.html" target="_blank">Fish</a></li>
+								<li> <a href="https://files.vectorly.io/demo/docs-demos/demo.html#jellyfish" target="_blank">Jellyfish</a></li>
+								<li> <a href="https://files.vectorly.io/demo/docs-demos/demo.html#ducks" target="_blank">Ducks</a></li>
+								<li> <a href="https://files.vectorly.io/demo/docs-demos/demo.html#tractor" target="_blank">Tractor</a></li>
+								<li> <a href="https://files.vectorly.io/demo/docs-demos/demo.html#fish" target="_blank">Fish</a></li>
 
 							</ul>
 
