Added API key and other relevant info

--- a/src/docs-page.html
+++ b/src/docs-page.html
@@ -398,7 +398,7 @@
 
 
 
-						 <p>First, you'll need to include our SDK into your app's gradle file. You can import it from our Maven repository, as shown eblow. You'll also need to include the commons-io package</p>
+						 <p>First, you'll need to include our SDK into your app's gradle file. You can import it from our Maven repository, as shown below.</p>
 
 
 						 <script src="https://gist.github.com/sb2702/66a03574ca88836e0fbeb839e3f2d19d.js"></script>
@@ -411,7 +411,7 @@
 						 <script src="https://gist.github.com/sb2702/e0a5f12e2ff23b0dffccb046dc770a46.js"></script>
 
 						 <p>
-							 Once the ExoPlayer view is set up, you can call set up the Upscaler as in the following example
+							 Once the ExoPlayer view is set up, you can call set up the Upscaler as in the following example. You'll need to feed your API key, which you can get from the <a href="https://dashboard.vectorly.io">Vectorly dashboard</a>.
 						 </p>
 
 
