Added new models

--- a/src/docs-page.html
+++ b/src/docs-page.html
@@ -319,7 +319,7 @@
 					<section class="docs-section" id="item-3-5">
 						<h2 class="section-heading">Models</h2>
 
-						<p>There are multiple AI models you can choose from. The default is 'residual_3k', but you can specify a model when instantiating the upscaler object</p>
+						<p>There are multiple AI models you can choose from. The default is 'residual_3k_3x', but you can specify a model when instantiating the upscaler object</p>
 						<script src="https://gist.github.com/sb2702/31d262689770e55fd84bbb3672e47818.js"></script>
 
 
@@ -339,27 +339,27 @@
 
 
 								<tr>
-									<td>residual_3k</td>
+									<td>residual_3k_3x</td>
 									<td>2.1</td>
-									<td>Basic lightweight model using residuals</td>
+									<td>Basic lightweight model, which upscales by a factor of 3</td>
 								</tr>
 
 								<tr>
-									<td>residual_5k</td>
+									<td>residual_4k_2x</td>
 									<td>0</td>
-									<td>Slightly heavier residual model</td>
+									<td>Basic lightweight model, which upscales by a factor of 2</td>
 								</tr>
 
 								<tr>
-									<td>vdsr</td>
+									<td>residual_5k_2x</td>
 									<td>0</td>
-									<td>Old model, not as good as residual_3k</td>
+									<td>Medium sized model, upscales by a factor of 2</td>
 								</tr>
 
 								<tr>
-									<td>7K</td>
+									<td>residual_5k_3x</td>
 									<td>0</td>
-									<td>Old model, the worst performing model, deprecated</td>
+									<td>Medium sized model, upscales by a factor of 3</td>
 								</tr>
 
 								<tr>
